envoy.yaml
static_resources:
  listeners:
    - name: ingress
      per_connection_buffer_limit_bytes: 4096
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9999
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: HTTP1
                use_remote_address: false
                common_http_protocol_options:
                  idle_timeout: 2s
                stream_idle_timeout: 2s
                request_timeout: 2s
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: api
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: api
                            timeout: 2s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: api
      connect_timeout: 0.2s
      per_connection_buffer_limit_bytes: 4096
      type: STATIC
      lb_policy: ROUND_ROBIN
      circuit_breakers:
        thresholds:
          - max_connections: 6000
            max_pending_requests: 6000
            max_requests: 6000
            max_retries: 0
      load_assignment:
        cluster_name: api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    pipe:
                      path: /sockets/api1.sock
              - endpoint:
                  address:
                    pipe:
                      path: /sockets/api2.sock
